--- a/package.json
+++ b/package.json
@@ -1,27 +1,18 @@
 {
-  "name": "proposals",
+  "name": "aiproposals",
   "version": "1.0.0",
-  "description": "",
+  "private": true,
   "scripts": {
-  "dev": "vite",
-  "build": "vite build",
-  "preview": "vite preview"
-}
-
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/ash007133/aiproposals.git"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "commonjs",
-  "bugs": {
-    "url": "https://github.com/ash007133/aiproposals/issues"
-  },
-  "homepage": "https://github.com/ash007133/aiproposals#readme",
   "dependencies": {
-    "react": "^19.2.4",
-    "react-dom": "^19.2.4"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "vite": "^5.0.0",
+    "@vitejs/plugin-react": "^4.0.0"
   }
 }
